# zOS-pix

./: .gitignore  README.md  build.sh  popcorn.sh  run.sh  setup.sh
cmake/: FindCudaUtils.cmake  FindGPS.cmake  FindMinuszeroLocalizationROSTemplate.cmake  FindMinuszeroMappingTemplate.cmake  FindMinuszeroPerceptionROSTemplate.cmake  FindMinuszeroPurePursuit.cmake  FindProtos.cmake  FindTensorRT.cmake  Findcommons.cmake  Finddatastructures.cmake  Findmscl.cmake
scripts/: build-perception.bash  color.sh  control.bash  perception-env.bash  vehicle-env-bash
src/SAL/camera/: .depend  CMakeLists.txt  camera_common.c  camera_common.h  debug.c  debug.h  device.c  display_unit.c  display_unit.h  draw.c  gstream.h  image_capture.c  image_capture.h  main.c  main.cpp  main.h  recording_unit.c  recording_unit.h  sleep_for.h  topic_data.h  un_plug.sh  v4l2_capture.c  v4l2_capture.h
src/SAL/dummy_drivers/camera/: CMakeLists.txt  run.cpp
src/SAL/dummy_drivers/camera/include/: camera-stack.hpp  camera.hpp  globals.hpp
src/SAL/dummy_drivers/camera/src/: camera-stack.cpp  camera.cpp
src/SAL/gps/: CMakeLists.txt
src/SAL/gps/include/: gpsd_config.h
src/SAL/gps/src/: gnss.cpp  gnss_data.cpp  gps_to_pose_conversion_node.hpp  path.txt  path_track.txt
src/SAL/imu/: CMakeLists.txt
src/SAL/imu/config/: imu_config.yaml
src/SAL/imu/include/: getCurrentConfig.h  parseData.h
src/SAL/imu/src/: imu_data.cpp  imu_msg_struct.cpp
src/commons/: CMakeLists.txt  commons.cpp  commons.hpp
src/commons/IPC/: serialize-deserialize.hpp
src/commons/boost_serial/: boost_serial_template.hpp
src/commons/render/: GLrender.hpp
src/control/: CMakeLists.txt
src/control/include/: matplotlibcpp.h
src/control/src/: control_w_global_planner.cpp  control_w_waypoint_collector.cpp  tracked_path.txt  visualize.py
src/data-structures/include/control/: control-DS.hpp
src/data-structures/include/localization/: gnss_data.hpp  imu_data.hpp  localizationDS.hpp  odometry.hpp
src/data-structures/include/mapping/: mappingDS.hpp
src/data-structures/include/motion-planning/: motion-planningDS.hpp
src/data-structures/include/perception/: freeSpaceDS.hpp  laneEstimationDS.hpp  objectDetectionDS.hpp  perceptionDS.hpp  perception_common_headers.hpp  segmentationDS.hpp
src/data-structures/include/vehicleio/: vehicle_DS.hpp
src/localization/: CMakeLists.txt
src/localization/include/: ekf.h  robot_localization_estimator.h  ros_filter.h  ros_filter_types.h
src/localization/src/: ekf.cpp  ekf_localization_node.cpp  filter_base.cpp  robot_localization_estimator.cpp  ros_filter.cpp
src/mapping/: CMakeLists.txt
src/mapping/include/: centroidtracker.hpp  cubic_spline.hpp  global_planner.hpp
src/mapping/src/: main.cpp
src/perception/: CMakeLists.txt
src/perception/core-debugging/: CMakeLists.txt  README.md  core-debug.cpp
src/perception/core-debugging/cmake/: FindcuBLAS.cmake
src/perception/core-debugging/include/: frameReader.hpp  globals.hpp  perception.hpp
src/perception/core-debugging/scripts/: build.sh  clean.sh  env.sh
src/perception/core-debugging/src/: perception.cpp
src/perception/cuda-utils/: CMakeLists.txt
src/perception/cuda-utils/include/: decodeLabel.hpp  perception_kernels.hpp  utils.hpp
src/perception/cuda-utils/src/: decodeLabel.cu  perception_kernels.cpp  utils.cpp
src/perception/dl-runtime-framework/: CMakeLists.txt  README.md
src/perception/dl-runtime-framework/include/: DL_types.hpp  dlRF.hpp  utils.hpp
src/perception/dl-runtime-framework/src/: dlRF.cpp  utils.cpp
src/perception/include/: frameReader.hpp  globals.hpp  perception.hpp
src/perception/src/: node.cpp  node.hpp  perception.sh
src/perception/src/freespace/: CMakeLists.txt
src/perception/src/freespace/ecal/: freespace_node_ecal.cpp  freespace_node_ecal.hpp  run_freespace_ecal.cpp
src/perception/src/freespace/include/: freespace.hpp
src/perception/src/freespace/src/: freespace.cpp
src/perception/src/lane-estimation/: CMakeLists.txt
src/perception/src/lane-estimation/ecal/: lane_estimation_node_ecal.cpp  lane_estimation_node_ecal.hpp  run_lane_estimation_ecal.cpp
src/perception/src/lane-estimation/include/: lane-estimation.hpp
src/perception/src/lane-estimation/src/: lane-estimation.cpp
src/perception/src/object-detection/: CMakeLists.txt
src/perception/src/object-detection/ecal/: object_detection_node_ecal.cpp  object_detection_node_ecal.hpp  run_object_detection_ecal.cpp
src/perception/src/object-detection/include/: object-detection.hpp
src/perception/src/object-detection/src/: object-detection.cpp
src/perception/src/segmentation/: CMakeLists.txt
src/perception/src/segmentation/ecal/: run_segmentation_ecal.cpp  segmentation_node_ecal.cpp  segmentation_node_ecal.hpp
src/perception/src/segmentation/include/: segmentation.hpp
src/perception/src/segmentation/src/: segmentation.cpp
src/planning/: CMakeLists.txt
src/planning/TODO_Parallel_Parking/: parallel_park.py
src/planning/include/: cubic_spline.h  frenet_path.h  global_planner.hpp  global_points.hpp  quartic_polynomial.h  quintic_polynomial.h  robotics_types.h
src/planning/src/: main.cpp
src/prediction/: main.cpp
src/vehicleio/: CMakeLists.txt
src/vehicleio/include/: cpp_headers.hpp  pix_data.hpp  vehicleio.hpp
src/vehicleio/socketcan-cpp/: CMakeLists.txt
src/vehicleio/socketcan-cpp/examples/: bit_play.cpp  read_parse.cpp  read_write.cpp
src/vehicleio/socketcan-cpp/install/lib/cmake/socketcan_cpp/: socketcan_cpp-config.cmake  socketcan_cpp-targets-noconfig.cmake  socketcan_cpp-targets.cmake
src/vehicleio/src/: main.cpp  vehicleio.cpp
